# weedle4

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml  refs.yml  sync.yml
src/: attribute.rs  interface.rs  lib.rs  term.rs  types.rs
tests/: webidl.rs  webref.rs
tests/defs/: streams.webidl
